--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 
 
         <!-- Search Start -->
+	    
+	    <marquee behavior="scroll" direction="left">Multiple job openings for the position of Relationship Manager in various locations including Rajasthan, Gujarat, Madhya Pradesh, Uttar Pradesh, and Uttarakhand. Click the button Sales & Communication below to apply</marquee>
+
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
             <div class="container">
                 <div class="row g-2">
