--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
-                        <a class="cat-item rounded p-4" href="">
+                        <a class="cat-item rounded p-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdfVCcwVy05636wnwUat89BKZZDipADbWkryeQRROI_uO7F5Q/viewform?usp=sf_link">
                             <i class="fa fa-3x fa-headset text-primary mb-4"></i>
                             <h6 class="mb-3">Customer Service</h6>
                             <p class="mb-0">123 Vacancy</p>
@@ -194,7 +194,7 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <a class="cat-item rounded p-4" href="">
+                        <a class="cat-item rounded p-4" href="https://docs.google.com/forms/d/e/1FAIpQLSdfVCcwVy05636wnwUat89BKZZDipADbWkryeQRROI_uO7F5Q/viewform?usp=sf_link">
                             <i class="fa fa-3x fa-chart-line text-primary mb-4"></i>
                             <h6 class="mb-3">Business Development</h6>
                             <p class="mb-0">153 Vacancy</p>
@@ -299,7 +299,7 @@
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                            <a class="btn btn-primary" href="">Apply Now</a>
+                                            <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdfVCcwVy05636wnwUat89BKZZDipADbWkryeQRROI_uO7F5Q/viewform?usp=sf_link">Apply Now</a>
                                         </div>
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
                                     </div>
@@ -318,8 +318,8 @@
                                     </div>
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
-                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
-                                            <a class="btn btn-primary" href="">Apply Now</a>
+                                            <a class="btn btn-light btn-square me-3" href="https://docs.google.com/forms/d/e/1FAIpQLSdfVCcwVy05636wnwUat89BKZZDipADbWkryeQRROI_uO7F5Q/viewform?usp=sf_link"><i class="far fa-heart text-primary"></i></a>
+                                            <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdfVCcwVy05636wnwUat89BKZZDipADbWkryeQRROI_uO7F5Q/viewform?usp=sf_link">Apply Now</a>
                                         </div>
                                         <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
                                     </div>
@@ -381,7 +381,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfaYG1mRBQx4PJekDXXAK-klIfe-PWRQiMpbN-3maArMn42Kw/viewform?usp=sf_link">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 May, 2023</small>
                                     </div>
                                 </div>
                             </div>
@@ -404,7 +404,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 May, 2023</small>
                                     </div>
                                 </div>
                             </div>
@@ -424,7 +424,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfaYG1mRBQx4PJekDXXAK-klIfe-PWRQiMpbN-3maArMn42Kw/viewform?usp=sf_link">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 May, 2023</small>
                                     </div>
                                 </div>
                             </div>
@@ -444,7 +444,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 May, 2023</small>
                                     </div>
                                 </div>
                             </div>
@@ -464,7 +464,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfaYG1mRBQx4PJekDXXAK-klIfe-PWRQiMpbN-3maArMn42Kw/viewform?usp=sf_link">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 07 May, 2023</small>
                                     </div>
                                 </div>
                             </div>
@@ -484,7 +484,7 @@
                                             <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                             <a class="btn btn-primary" href="">Apply Now</a>
                                         </div>
-                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2045</small>
+                                        <small class="text-truncate"><i class="far fa-calendar-alt text-primary me-2"></i>Date Line: 01 Jan, 2023</small>
                                     </div>
                                 </div>
                             </div>
