--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@
                             </div>
                         </div>
                     </div>
+			<a href="https://www.google.com">
                     <div class="col-md-2">
                         <button class="btn btn-dark border-0 w-100">Search</button>
+			    </a>
                     </div>
                 </div>
             </div>
