--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
                     </div>
 			<a href="https://www.google.com">
                     <div class="col-md-2">
-                        <button class="btn btn-dark border-0 w-100">Search</button>
-			    </a>
-                    </div>
+                        <button class="btn btn-dark border-0 w-100">Search</button>   
+                    </div></a>
                 </div>
             </div>
         </div>
