--- a/index.html
+++ b/index.html
@@ -690,9 +690,7 @@
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Newsletter</h5>
                         <p>We are excited to announce the opening of our new job consultancy, TalentIQ Consulting. Our team is passionate about helping individuals find their dream careers by providing top-notch job search assistance, resume building, interview coaching, career counseling, and skill development services. We believe that our job consultancy stands out from others in the market because of our personalized approach and commitment to our clients' success.
-                          Our services are designed to help clients achieve their career goals by providing them with the necessary tools and resources to succeed. For example, we have successfully helped many clients find their dream jobs and facilitated successful career transitions for others. Our team has a wealth of experience in the recruitment and staffing industry, which allows us to provide insightful and strategic guidance to our clients.
-                          At Oyes,Jobs!  we believe that a successful job placement or career transition is the result of a carefully crafted process that involves consultation, assessment, matching, and follow-up. We use data analytics and technology to support our operations and decision-making, but we also emphasize the importance of a personalized and customized approach.
-                          We are confident that our job consultancy can help you achieve your career goals.</p>
+                          Our services are designed to help clients achieve their career goals by providing them with the necessary tools and resources to succeed.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                             <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
