--- a/testimonial.html
+++ b/testimonial.html
@@ -104,7 +104,7 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Vivek</h5>
+                                <h5 class="mb-1">Hitesh</h5>
                                 <small>Profession</small>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>I found my dream job thanks to the personalized guidance and support I received from this consultancy</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/Vivek.jpeg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded" src="img/HITESH.jpeg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h5 class="mb-1">Hitesh</h5>
                                 <small>Profession</small>
