--- a/testimonial.html
+++ b/testimonial.html
@@ -102,7 +102,7 @@
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>Joining the Oyes Jobs team has been a truly enriching experience for me</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-1.jpg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded" src="img/Vivek.jpeg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h5 class="mb-1">Hitesh</h5>
                                 <small>Profession</small>
