--- a/testimonial.html
+++ b/testimonial.html
@@ -124,7 +124,7 @@
                         <i class="fa fa-quote-left fa-2x text-primary mb-3"></i>
                         <p>Their process is efficient, customized, and effective. They really took the time to understand my career goals and match me with the right opportunities.</p>
                         <div class="d-flex align-items-center">
-                            <img class="img-fluid flex-shrink-0 rounded" src="img/HITESH.jpeg" style="width: 50px; height: 50px;">
+                            <img class="img-fluid flex-shrink-0 rounded" src="img/testimonial-2.jpg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
                                 <h5 class="mb-1">Smith</h5>
                                 <small>Profession</small>
