--- a/testimonial.html
+++ b/testimonial.html
@@ -104,7 +104,7 @@
                         <div class="d-flex align-items-center">
                             <img class="img-fluid flex-shrink-0 rounded" src="img/Vivek.jpeg" style="width: 50px; height: 50px;">
                             <div class="ps-3">
-                                <h5 class="mb-1">Hitesh</h5>
+                                <h5 class="mb-1">Vivek</h5>
                                 <small>Profession</small>
                             </div>
                         </div>
