--- a/index.html
+++ b/index.html
@@ -678,8 +678,8 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Contact</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, Gurgaon</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>9718866343</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Laxmi Apartment Sector 99A Gurgaon</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>7464864350</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>oyesjobs@gmail.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href="https://twitter.com/oyesjobs?t=4qx0djWrbM_GEdIBxe5XOg&s=08"><i class="fab fa-twitter"></i></a>
