--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>JobEntry - Job Portal Website Template</title>
+    <title>O,yesjobs!</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -155,7 +155,7 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href="https://twitter.com/oyesjobs?t=4qx0djWrbM_GEdIBxe5XOg&s=08"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100092428351801&mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                           
                             <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/oh-yes-jobs-0abb79273"><i class="fab fa-linkedin-in"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
