Update job-detail.html do it

--- a/job-detail.html
+++ b/job-detail.html
@@ -45,7 +45,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h1 class="m-0 text-primary">JobEntry</h1>
+                <h1 class="m-0 text-primary">O,YesJobs!</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -110,7 +110,7 @@
 
                         <div class="mb-5">
                             <h4 class="mb-3">Job description</h4>
-                            <p>Dolor justo tempor duo ipsum accusam rebum gubergren erat. Elitr stet dolor vero clita labore gubergren. Kasd sed ipsum elitr clita rebum ut sea diam tempor. Sadipscing nonumy vero labore invidunt dolor sed, eirmod dolore amet aliquyam consetetur lorem, amet elitr clita et sed consetetur dolore accusam. Vero kasd nonumy justo rebum stet. Ipsum amet sed lorem sea magna. Rebum vero dolores dolores elitr vero dolores magna, stet sea sadipscing stet et. Est voluptua et sanctus at sanctus erat vero sed sed, amet duo no diam clita rebum duo, accusam tempor takimata clita stet nonumy rebum est invidunt stet, dolor.</p>
+                            <p>The Relationship Officer/Relationship Manager role involves recommending and promoting home loan products to customers. Responsibilities include interacting with customers, executing branding/marketing activities, handling documentation, and achieving sales targets. The ideal candidate should have sales experience, strong communication skills, and a customer-oriented approach. A graduate degree is preferred, and the salary ranges from 1.50 to 4.90 lacs..</p>
                             <h4 class="mb-3">Responsibility</h4>
                             <p>Attend to walk-ins at branches and visit clients at their location and Fulfill sales requirements, including pre- and post-sanction sales activities</p>
                             <ul class="list-unstyled">
